# matrix-process-manager

./: README.md  angular.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release-msix.yml
Learn/prism/: app.json  installation.md  overview.md  quick-start.md
Learn/prism/console/: command-center.md
Learn/prism/monitoring/: dashboard.md  performance.md  processes.md  system-info.md
Learn/prism/settings/: general.md
Learn/prism/tools/: docker.md  network-devices.md  ports.md  ssh-keys.md  startup-apps.md  storage-cleanup.md
Learn/prism/troubleshooting/: common-issues.md
doc/: features.md
scripts/: build-msix.js
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  disk_cleanup.rs  lib.rs  main.rs  managers.rs  models.rs  providers.rs  startup.rs
src-tauri/src/command_knowledge/: database.rs  indexer.rs  migration.rs  mod.rs  models.rs  repositories.rs  scanner.rs  service.rs
src-tauri/src/terminal/: indexer.rs  manager.rs  mod.rs  models.rs  parser.rs  repository.rs  service.rs  session.rs
src/app/: app.component.html  app.component.ts  app.models.ts  app.routes.ts  process-snapshot.worker.ts
src/app/components/common-dialog/: common-dialog.component.html  common-dialog.component.ts
src/app/components/copy-button/: copy-button.component.ts
src/app/components/icon/: icon.component.ts
src/app/directives/: splitter.directive.ts
src/app/services/: workarea-state.service.ts
(+71 files in other folders)
